src/objects/AcctSeed__Billing_Credit_Memo__c.object
<CustomObject>
    <description>Used to document the relationship a billing credit memo record and a billing invoice record. A billing credit memo record is created during the apply credit memo process.</description>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The accounting period associated with the billing credit memo</inlineHelpText>
        <label>Applied Accounting Period</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The accounting period must be open</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Billing Credit Memos</relationshipLabel>
        <relationshipName>Billing_Credit_Memos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount_Number__c</fullName>
        <formula>AcctSeed__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <label>Applied Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Applied_Date__c</fullName>
        <inlineHelpText>Used to specify the applied date for financial reporting.</inlineHelpText>
        <label>Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Credit_Memo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Credit Memo</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The type field of the billing must be &quot;Credit Memo&quot;</errorMessage>
            <filterItems>
                <field>AcctSeed__Billing__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Credit Memo</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing__c</referenceTo>
        <relationshipLabel>Applied Invoices to Credit Memo</relationshipLabel>
        <relationshipName>Billing_Credit_Memos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Invoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Invoice</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The type field of the billing must be &quot;Invoice&quot;</errorMessage>
            <filterItems>
                <field>AcctSeed__Billing__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Invoice</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing__c</referenceTo>
        <relationshipLabel>Applied Credit Memos to Invoice</relationshipLabel>
        <relationshipName>Billing_Credit_Memos1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Billing Credit Memo</label>
    <nameField>
        <displayFormat>BCM-{00000}</displayFormat>
        <label>Billing Credit Memo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>